@startuml
title Diagramme de classes shop
class User {
    - id : Number
    - username: String
    - email: String
    - password: String
}

class Order {
    - id : Number
    - order_date : date
    - confirmed : boolean
    - coonfirmedDate : date
}

class OrderArticle {
    - id: float
    - quantity : float
}

class Article {
    - id : Number
    - name: String
    - stock: Number
    - price: Number
    - totalOrdered : Number
}

class SubCategory {
    - id : Number
    - name : String
}
class Category{
    - id : Number
    - id : String
}

User "1"--"*" Order
Order "1"--"*" OrderArticle
OrderArticle "*"--"1" Article

Category "1"--"*" SubCategory
SubCategory "1"--"*" Article
@enduml
